--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-                <img src="/img/logo.png" id="crislogo">
+                <img src="img/logo.png" id="crislogo">
         </div>
       
         
